asset/imcomp/traherne/traherne.css
/*
////////////////////////////////////////////////////////////////////////////////
//
// @file        traherne.css
// @description Traherne Digital Collator user interface styles
// @author      Abhishek Dutta <adutta@robots.ox.ac.uk>
// @date        Nov 2017
//
////////////////////////////////////////////////////////////////////////////////
*/

body {
    font-family: Verdana,Arial,Helvetica; /* see http://web.mit.edu/jmorzins/www/fonts.html */
    margin: 0;
    padding: 0;
    border: 0;
    background-color: #ffffff;
    color: #000000;
    opacity: 1.0;
    /*  min-width: 1280px; min-height: 720px; /* laptop screen */
    min-width: 900px; min-height: 600px; /* small screen */
}

* {
    box-sizing: border-box;
}

.display-none {
    display: none;
}
.display-inline-block {
    display: inline-block;
}

#page {
    position: relative;
    width: 100%;
    min-height: 100vh;
    margin: 0;
    padding: 0.4%;
}

.top_panel { display:block; border:0px solid #9e9e9e; height:8em; overflow:hidden; }
.top_panel .about { vertical-align:top; }
.top_panel .about .links { font-size:0.7em; }

.top_panel .control { vertical-align:top; padding:0 1em; }
.top_panel .control > table { width:14em; }

.top_panel .config { width:100%; vertical-align:top; }
.top_panel .config .config_container { width:100%; height:7.5em; overflow:auto; border:1px solid #cccccc;}

.top_panel .config .config_container .config_item { display:inline-table; border:1px solid #cccccc; background-color:#f2f2f2; border-radius:0.5em; margin:0.4em 0.2em; padding:0.4em 0.2em; }
.top_panel .config .config_container .config_item .title { display:table-row; text-align:center; }
.top_panel .config .config_container .config_item .options { display:table-row; }

#middle_panel {
    display: table;
    table-layout: fixed;
    margin: 0;
    padding: 0;
    border: 1px solid #9E9E9E;
    overflow: hidden;
    width: 100%;
}
#middle_panel label {
    vertical-align:middle;
}
#middle_panel button {
    vertical-align:middle;
}
#middle_panel select {
    vertical-align:middle;
}
#middle_panel input[type="radio"] {
    vertical-align:middle;
}

#middle_panel .row {
    display: table-row;
    margin: 0;
    padding: 0;
}
#middle_panel .cell {
    display: table-cell;
    margin: 0;
    padding: 0.4% 0;
    width: 48%;
    text-align: center;
    vertical-align: middle;
    border-right: 1px solid #9E9E9E;
}

/* base panel */
#left_content {
    text-align: right !important;
    padding: 0 !important;
    margin: 0 !important;
}
#left_content_container { /* container for via or base image */
    position: relative;
    display: inline-block;
    width: 100%;
    height: 70vh;
    min-height: 70vh;
}
#left_content_img_panel {
    position: relative;
}
#left_content_image_top_panel {
    position: absolute;
    z-index: 1002;
    width: 100%;
    height: 100%;
    top: 0;
}
#left_content_image_zoom_panel {
    position: absolute;
    overflow: hidden;
    border: 1px solid red;
}
#left_content_image_zoom {
    position: absolute;
    z-index: 1001;
}
#left_content_image {
    z-index: 1000;
    top: 0;
    width: 100%;
}

/* comp panel */
#right_content {
    text-align: left !important;
    padding: 0 !important;
    margin: 0 !important;
}
#right_content_container { /* container for via or comp image */
    position: relative;
    display: inline-block;
    width: 100%;
    height: 70vh;
    min-height: 70vh;
}
#right_content_img_panel {
    position: relative;
}
#right_content_image {
    text-align: left;
    z-index: 1000;
    top: 0;
    left: 0;
    width: 100%;
}
#right_content_image_zoom_panel {
    position: absolute;
    overflow: hidden;
    border: 1px solid red;
}
#right_content_image_zoom {
    position: absolute;
    z-index: 1001;
}
#right_content_image_top_panel {
    position: absolute;
    z-index: 1002;
    width: 100%;
    height: 100%;
    top: 0;
    right: 0;
}

.img_label {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}
.img_label select {
    max-width: 80%; /* squash large filenames */
}

.centered_text {
    text-align: center;
}
.img_control {
    overflow: scroll;
}
.vertical_img_separator_panel {
    width: 0.8% !important;
    min-width: 0.5% !important;
    max-width: 1% !important;
}
.button_group {
    display: block;
}
.button_group_space1 {
    display: inline-block;
    width: 2%;
}
.img_upload_status {
    display: inline-block;
    font-size: large;
    cursor: default;
}

/* horizontal reference line */
#ref_line_container {
    padding: 0 !important;
    margin: 0 !important;
}

#ref_line_container:hover {
    cursor: pointer;
}

.horizontal_ref_line {
    z-index:1000;
    padding:0;
    border-top: 2px solid white;
    border-bottom: 2px solid black;
    position: fixed;
    width: 99%;
    height: 4px;
}
.horizontal_ref_line:hover {
    cursor: pointer;
}

/* message panel */
#message_panel {
    position: relative;
    display: block;
    font-size: 0.9rem;
    width: 100%;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    margin: 0.5em 0;
    text-align: center;
}
.blue {
    color: blue;
}
.red {
    color: red;
}

/* misc. */
.nobreak {
    white-space: nowrap;
}

.text_button {
    color: #0000ff;
    padding: 0 0.3em;
    margin: 0 0.2em;
    -moz-user-select:none;
    -webkit-user-select:none;
    -ms-user-select:none;
}
.text_button:hover { cursor:pointer; }
.text_button:active { color: #ff0000; }

